<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/language_tv"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:text="@string/language_field"
        android:textSize="@dimen/header_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/theme_tv"
        app:layout_constraintEnd_toStartOf="@+id/language_iv1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/language_iv1"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/language_item"
        android:scaleType="fitXY"
        android:src="@drawable/ic_russia"
        app:layout_constraintBottom_toBottomOf="@+id/language_tv"
        app:layout_constraintEnd_toStartOf="@+id/language_iv2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/language_tv"
        app:layout_constraintTop_toTopOf="@+id/language_tv" />

    <ImageView
        android:id="@id/language_iv2"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/language_item"
        android:scaleType="fitXY"
        android:src="@drawable/ic_uk"
        app:layout_constraintBottom_toBottomOf="@+id/language_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/language_iv1"
        app:layout_constraintTop_toTopOf="@+id/language_tv" />

    <TextView
        android:id="@+id/theme_tv"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/theme_field"
        android:textSize="@dimen/header_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/language_tv"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/language_tv"
        app:layout_constraintTop_toBottomOf="@id/language_tv" />

    <ImageView
        android:id="@+id/theme_iv1"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:contentDescription="@string/theme_item"
        android:src="@drawable/ic_light_mode_button"
        app:layout_constraintBottom_toBottomOf="@+id/theme_tv"
        app:layout_constraintEnd_toEndOf="@+id/language_iv1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/language_iv1"
        app:layout_constraintTop_toTopOf="@+id/theme_tv" />

    <ImageView
        android:id="@+id/theme_iv2"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:contentDescription="@string/theme_item"
        android:src="@drawable/ic_dark_mode_button"
        app:layout_constraintBottom_toBottomOf="@+id/theme_tv"
        app:layout_constraintEnd_toEndOf="@id/language_iv2"
        app:layout_constraintStart_toStartOf="@+id/language_iv2"
        app:layout_constraintTop_toTopOf="@+id/theme_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>