<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="174dp" />

    <TextView
        android:id="@+id/language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/theme_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constrainedWidth="true"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="60dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/language_field"
        android:textSize="26sp"
        />

    <ImageView
        android:id="@+id/language_iv1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/language_tv"
        app:layout_constraintEnd_toStartOf="@+id/language_iv2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@+id/language_tv"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/language_item"/>

    <ImageView
        android:id="@id/language_iv2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/language_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/language_iv1"
        app:layout_constraintTop_toTopOf="@+id/language_tv"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/language_item"/>

    <TextView
        android:id="@+id/theme_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_field"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/language_tv"
        android:layout_marginBottom="60dp"/>

    <ImageView
        android:id="@+id/theme_iv1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/theme_tv"
        app:layout_constraintEnd_toStartOf="@id/theme_iv2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@id/theme_tv"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/theme_item"/>

    <ImageView
        android:id="@+id/theme_iv2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/theme_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/theme_iv1"
        app:layout_constraintTop_toTopOf="@id/theme_tv"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/theme_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>